--- a/.github/workflows/aakarsh.yml
+++ b/.github/workflows/aakarsh.yml
@@ -19,3 +19,11 @@ jobs:
       run: make
     - name: runtest
       run: make runtest
+    - name: Build and push to docker
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: 9756698611/aakarsh
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+      
